Kubernetes/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcg-ingress-dev
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # DEV environment
          - path: /dev/users
            pathType: Prefix
            backend:
              service:
                name: fcg-users-svc
                port:
                  number: 80
          - path: /dev/games
            pathType: Prefix
            backend:
              service:
                name: fcg-games-svc
                port:
                  number: 80
          - path: /dev/orders
            pathType: Prefix
            backend:
              service:
                name: fcg-orders-svc
                port:
                  number: 80
          - path: /dev/payments
            pathType: Prefix
            backend:
              service:
                name: fcg-payments-svc
                port:
                  number: 80
