Kubernetes/ingress-uat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcg-ingress-uat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # UAT environment
          - path: /uat/users
            pathType: Prefix
            backend:
              service:
                name: fcg-users-svc
                port:
                  number: 80
          - path: /uat/games
            pathType: Prefix
            backend:
              service:
                name: fcg-games-svc
                port:
                  number: 80
          - path: /uat/orders
            pathType: Prefix
            backend:
              service:
                name: fcg-orders-svc
                port:
                  number: 80
          - path: /uat/payments
            pathType: Prefix
            backend:
              service:
                name: fcg-payments-svc
                port:
                  number: 80
