Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcg-ingress-prd
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # PROD environment (sem prefixo)
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: fcg-users-svc
                port:
                  number: 80
          - path: /games
            pathType: Prefix
            backend:
              service:
                name: fcg-games-svc
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: fcg-orders-svc
                port:
                  number: 80
          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: fcg-payments-svc
                port:
                  number: 80
